tests/contract_testcases/substrate/tags/event_tag.sol

        /// @param
        event x (
            uint32 f
        );
// ---- Expect: diagnostics ----
// error: 2:14-19: tag '@param' missing parameter name
